--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,13 @@
 .container {
   padding: 0 2rem;
+  background-image: url("https://as2.ftcdn.net/v2/jpg/02/84/72/73/1000_F_284727317_JDW4krryXx7mNaBo6wQZ0Bux6yh632NC.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 97vh;
   flex: 1;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -15,10 +16,9 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  margin-top: auto;
 }
 
 .footer a {
@@ -113,4 +113,9 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.loading {
+  align-items: center;
+  height: 1000px;
 }
